# gix-engine

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  compile-shader.sh
examples/: CMakeLists.txt  compile-shader.sh
examples/basic_triangle/: main.c  scene.c  scene.h
examples/basic_triangle/shader/: basic_triangle.vert.hlsl  triangle_fill.frag.hlsl
examples/camera_move/: cm_scene.c  cm_scene.h  main.c  scene.c  scene.h
examples/camera_move/shader/: camera_move.vert.hlsl
examples/camera_move2/: scene.c
examples/camera_move2/shader/: camera_move2.frag.hlsl  camera_move2.vert.hlsl
examples/clear_screen/: main.c  scene.c  scene.h
examples/cube/: main.c  scene.c
examples/cube/shader/: cube.frag.hlsl  cube.vert.hlsl
examples/drawobjects/: main.c  scene.c
examples/drawobjects/shader/: drawobjects.frag.hlsl  drawobjects.vert.hlsl
examples/index_vertex_buffer/: main.c  scene.c  scene.h
examples/instancing/: main.c  scene.c  scene.h
examples/instancing/shader/: instancing.vert.hlsl
examples/uniform/: main.c  scene.c
examples/uniform/shader/: uniform.frag.hlsl  uniform.vert.hlsl
examples/vertex_buffer/: main.c  scene.c  scene.h
examples/vertex_buffer/shader/: vertex_buffer.frag.hlsl  vertex_buffer.vert.hlsl
scripts-dev/: build.sh  clean.sh  configure.sh  examples.sh  pack.sh  rebuild.sh
src/: CMakeLists.txt  compile-shader.sh  gix_app_engine.c  gix_engine_version.c  gix_shader.c
src/include/gix_engine/: gix_app_engine.h  gix_checker.h  gix_engine.h  gix_engine_util.h  gix_engine_version.h  gix_log.h  gix_shader.h
src/include/gix_engine/core/: gix_app_engine.h  gix_engine_checker.h  gix_engine_log.h  gix_engine_shader.h  gix_engine_version.h  gix_log.h  gix_shader.h
src/include/gix_engine/utilities/: gix_define.h  gix_engine_define.h  gix_engine_platform.h  gix_platform.h
src/shader/: 3d_grid.frag.hlsl  3d_grid.vert.hlsl
src/shader/shader_include/: gix_engine_transform.hlsl
src/shader/shader_internal/: 3d_grid.frag.hlsl  3d_grid.vert.hlsl
